# VirtualSimulationProject

./: .gitignore  README.md  gzclient.bat  gzserver.bat
.bashrc/: profile.ps1
src/scene/: CMakeLists.txt  README.md  package.xml
src/scene/launch/: scene.launch
src/scene/worlds/: example.world
src/youbot/: README.md
src/youbot/robust_youbot_description/: CMakeLists.txt  package.xml
src/youbot/robust_youbot_description/sdf/: youbot.sdf
src/youbot/youbot_gazebo_robot/launch/: youbot.launch
src/youbot_description/: CMakeLists.txt  package.xml
src/youbot_description/sdf/: youbot_with_camera.sdf
utils/: setup_gazebo.bat  setup_ros.bat
