<?xml version="1.0"?>
<package format="2">
  <name>youbot_description</name>
  <version>0.0.0</version>
  <description>Youbot description package</description>
  <maintainer email="somebody@todo.todo">Somebody</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>gazebo_ros</exec_depend>

  <export>
  </export>
  
</package>
